--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ RawBlameHistory
 446 lines (344 sloc)  6.2 KB
 # Execute [man gitignore] in terminal for details
 
+website/testfield/media
+
 
 #### Secure ####
 
